# scicheck

./: .gitignore  LICENSE  README.md  pyproject.toml
scicheck/: _message.py  config.py  errors.py  numeric.py  numeric2.py  path.py  type.py  typing.py  utils.py
scicheck/errors/: __init__.py  base.py  numeric.py  path.py  string.py
